--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:kXPk1bhEKuI1f7fv5DGCZTW1F1EhpopLc6tJI2kr6EI=
+APP_KEY=base64:G+nWEAxPK74K3znb4k8j2Z29mV4x9hA/ZQwxjqVVmgg=
 APP_DEBUG=true
 APP_URL=https://red-guanaco-935735.hostingersite.com/
 
@@ -23,9 +23,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=u815974231_laravel
 DB_USERNAME=root
-DB_PASSWORD=2828
+DB_PASSWORD=Lost.jack@123
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
